--- a/src/components/share/Header.astro
+++ b/src/components/share/Header.astro
@@ -1,1 +1,40 @@
-This is Header
+---
+import '../../styles/nav.css';
+const currentPath = Astro.url.pathname;
+
+const  navItems = [
+    {href: '/',label:'Home'},
+    {href: '/about',label:'About'},
+    {href: '/contact',label:'Contact'},
+    {href: '/hotels',label:'Hotels'},
+]
+---
+
+
+<link href="https://fonts.googleapis.com/css?family=Nunito|Poppins" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Prosto+One" rel="stylesheet">
+
+
+
+<nav>
+    <div class="logo">
+        Logo
+    </div>
+    <div class="toggle-bars">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
+
+    <div class="nav">
+        <ul>
+
+            {navItems.map((item) => (
+                <li>
+                    <a href={item.href} class={currentPath === item.href ? 'active' : ''}>{item.label}</a>
+                </li>
+            ))}
+
+        </ul>
+    </div>
+</nav>
