--- a/src/components/share/Header.astro
+++ b/src/components/share/Header.astro
@@ -4,9 +4,9 @@ const currentPath = Astro.url.pathname;
 
 const  navItems = [
     {href: '/',label:'Home'},
-    {href: '/about',label:'About'},
-    {href: '/contact',label:'Contact'},
-    {href: '/hotels',label:'Hotels'},
+    {href: '/About',label:'About'},
+    {href: '/Contact',label:'Contact'},
+    {href: '/Hotels',label:'Hotels'},
 ]
 ---
 
